--- a/WebTasarim/4/style.css
+++ b/WebTasarim/4/style.css
@@ -21,6 +21,7 @@ a h2:hover{ /* Üstüne geldiğinde */
 
 ul{
 	display: flex; /* Yan yana sıralanması için */
+	flex-wrap: wrap;
 }
 
 li{
@@ -61,6 +62,7 @@ header{
 	display: flex;
 	text-align: center;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 .dashboard{
@@ -167,4 +169,20 @@ nav{
 
 .buttons i{
 	margin: 20px;
+}
+
+@media screen and (max-width: 450px){
+	.dashboard,
+	.logo{
+		flex-direction: column;
+	}
+
+	.dashboard{ 
+		flex-direction: column;
+	}
+
+	.glass2{
+		height: 60vh;
+		width: 100%;
+	}
 }
